# voice_evaluater

./: .env  .env.example  .gitignore  README_NEW.md  SETUP_COMPLETE.md  interview.py  main.py  pyproject.toml  reference.py  talking_bot.py  test_models.py
audio_files/: .gitkeep
reports/: .gitkeep  tashini_report_20260113_143400.json  tashini_report_20260113_143756.json  tashini_report_20260113_144242.json  tashini_report_20260113_152354.json
src/: __init__.py  azure_llm.py  azure_speech.py  confidence_analyzer.py  config.py  mti_analyzer.py  report_generator.py  utils.py
